fixing line length problems by adding second column. fixing alignment

--- a/style.css
+++ b/style.css
@@ -153,6 +153,7 @@ article:last-of-type {
 	padding-bottom:1em;
 	margin-bottom:2em;
 	background-color:rgba(142,130,100,.2);
+	margin-top:1em;
 }
 #content {
 	width:100%;
@@ -283,7 +284,7 @@ hgroup {
 	line-height: 24px;
 }		
 .entry-content img {
-	margin:5px 5px 5px 15px !important;
+	margin:5px 5px 10px 15px !important;
 	box-shadow: 0 3px 3px rgba(0,0,0,0.2);
 	-moz-box-shadow: 0 3px 3px rgba(0,0,0,0.2);
 	-webkit-box-shadow: 0 3px 3px rgba(0,0,0,0.2);
@@ -635,6 +636,9 @@ footer {
 ------------------------------------------------------------ */
 
 @media screen and (max-width:800px){
+	#site-title img {
+		width: 100%;
+	}
 	#primary {
 		float: left;
 		width:100%;
@@ -644,6 +648,18 @@ footer {
 		text-align:center;
 		padding-bottom:1em;
 		background-color:rgba(142,130,100,.2);
+		margin-top:0;
 	}
 
+
+}
+@media screen and (max-width: 500px){
+	.entry-content img{
+		display: block;
+		float:none;
+		margin-left:0!important;
+	}
+	.entry-content p {
+		clear:both!important;
+	}
 }
